--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link href="./index.css" rel="stylesheet">
   </head>
 <body>
-  <!-- Navigation -->
+  <!-- Navigation Bar -->
     <nav>
         <div class="logo">
             <a href="index.html"><img src="./Images/Afrigent.png"  alt="Logo Image"></a>
