--- a/service.html
+++ b/service.html
@@ -14,7 +14,7 @@
     <link href="index.css" rel="stylesheet">
   </head>
 <body>
-  <!-- Navigation Bar -->
+  <!-- Navigation -->
     <nav>
         <div class="logo">
             <a href="index.html"><img src="Afrigent.png"  alt="Logo Image"></a>
@@ -40,119 +40,169 @@
 
 <!-- Hero Section -->
   <br><br><br>
-  <div class="hero-section">
+  <div class="hero-section_3">
     <div class="hero-section-text">
-      <h1 style="font-family: montserrat; font-weight: 700;">We're here to help you grow<br> your business online.</h1>
+      <h1 style="font-family: montserrat; font-weight: 700;"> Our Services</h1>
       <br>
-      <center>
-        <div>
-          <a href="service.html">
-   <div class="button">
-       <p> Get Started</p>
-  </div>
-  </a>
-  </div>
-  </center>
     </div>
   </div>
-<!-- Flex box 1 -->
-<br><br>
+  <br><br>
 <div class="container">
   <div class="column-1 box">
-    <br>
-    <h3>WHO WE ARE</h3>
-    <h1 style="font-size:2rem;">Digital Marketing Specialists</h1>
+    <h1 style="font-size:2rem;">Learning Management System</h1>
     <br>
     <p>
-      As with any fully functioning website, Digital Marketing campaigns are an integral part of your success online. Our team is here to enhance your business online with effective management of your Search Engine Optimisation (SEO), Pay Per Click (PPC) and Social Media campaigns. Our professional service packages target your audience helping you to generate leads, conversions and brand awareness across multiple platforms.
+        • Engaging an interactive E-Learning modules using Articulate Storyline
+        <br>
+        • Setting up of custom storing, tracking and reporting capabilities without a    LMS
+        <br>
+        • Integration with LMS and LMS customization
+        <br>
+        • PowerPoint conversion to Storyline
+        <br>
+        • Customized advanced interactions with fully customized assessments
+        <br>
+        • Translation to various languages
+        <br>
+        • Course upload 
+        <br>
+        • Course sales page design
+        <br>
+        • Full customization of online school platform
+        <br>
+        • Assessment and quiz set up
+        <br>
+        • Certificate upload and design
+        <br><br>
+        Tools: Thinkific, Teachable, Kajabi, Podia, New zenlar, Cousera, Learndash, Learnword, Adode illustrator, Canva, Photoshop and more.    
     </p>
     <br>
   </div>
   <div class="column-2 box">
-    <img src="Digital Marketing.jpg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
+      <br><br>
+    <img src="manage.jpeg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
   </div>
 </div>
+<br>
 <!-- Flex box 2 -->
-<br><br>
-<div class="container_2">
+<div class="container_3">
   <div class="column-1 box">
-    <img src="concept.png" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
+      <br><br>
+    <img src="funnel.jpeg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
   </div>
-  <div class="column-2 box_2">
-    <br><br>
-       <h3>OUR CONCEPT</h3>
-    <h1 style="font-size:2rem;">We rise by lifting others.</h1>
+  <div class="column_3 box_2">
+      <br>
+    <h1 style="font-size:2rem;">Funnel Building</h1>
     <br>
     <p>
-      The purpose of Afrigent is based on delivering professional digital marketing campaigns and communication services that support your new or existing website. Our team includes dedicated and passionate individuals offering a variety of skills, experience and knowledge to get your business moving online - we work together to achieve your goals.
+        • Installation, configuration, setup, troubleshooting, customization of funnels
+        <br>
+        • Installing and customizing themes
+        <br>
+        • Sales funnel design
+        <br>
+        • Webinar funnel design
+        <br>
+        • Various Software integration
+        <br>
+        • Upsell and down-sell page
+        <br>
+        • SEO oriented
+        <br>
+        • Domain integration
+        <br>
+        • Payment integration (PayPal, stripe, cryptocurrencies,etc)
+        <br>
+        • And lots more
+        <br><br>
+        Tools: clickfunnels, groovefunnels, gohighlevel, sam cart, Cartflow, Woofunnels, New Zenlar.
     </p>
+    <br>
   </div>
 </div>
-<!-- Section_2 -->
-<div class="section_2">
-  <br><br>
-  <h3>OUR PROCESS</h3>
-  <h1 style="font-size:2rem;"><b>Brand awareness & lead generation</b></h1>
-  <br>
-  <P>
-    Through a multitude of Digital Marketing campaigns and our team's expertise at your disposal, there is no reason why you can't maximise your online potential with our professional approach and goal driven process. Everything we do is with purpose and meaning.
-  </P>
-  <br>
-  <br>
-  <!-- 3-column -->
-<div class="container_2">
-  <div class="column_2">
+<!-- /////////////////////////////////////// -->
+<br>
+<div class="container">
+  <div class="column-1 box">
+      <br><br>
+    <h1 style="font-size:2rem;">Graphics Design</h1>
     <br>
-    <center>
-    <div class="number">
-      <h1>1</h1>
-    </div>
-    <br>
-    <p style="color: rgb(46, 46, 46);">
-      We make the effort to understand our clients. We take on board your requirements. We're here to transform your business online and achieve your digital goals.
+    <p>
+        • Logo, brochure, flyers, business card, cover design, video editing and publishing, audio editing. Certificate design
+        <br><br>
+        Tools:  Adobe Creative Suite CS5, Canva, photoshop.....
     </p>
-  </center>
-  <br><br>
-  </div> 
-  <div class="column_2">
     <br>
-    <center>
-    <div class="number">
-      <h1>2</h1>
-    </div>
-    <br>
-    <p style="color: rgb(46, 46, 46);">
-      We research deep into your products/services, overall business and industry specifics ensuring we reach your target audience and beat the competition!
-    </p>
-  </center>
-  <br><br>
   </div>
-  
-  <div class="column_2">
-    <br>
-    <center>
-    <div class="number">
-      <h1>3</h1>
-    </div>
-    <br>
-    <p style="color: rgb(46, 46, 46);">
-      We believe that success comes from a strategy and a plan of action. Your Digital Marketing campaign is always one step ahead with the team at Afrigent.
-    </p>
-  </center>
-  <br><br>
+  <div class="column-2 box">
+    <img src="./Images/graphics.jpg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
   </div>
 </div>
+<br>
+<!-- Flex box 2 -->
+<div class="container_3">
+  <div class="column-1 box">
+      <br><br>
+    <img src="web design.jpeg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
+  </div>
+  <div class="column_3 box_2">
+      <br>
+    <h1 style="font-size:2rem;">Web Development</h1>
+    <br>
+    <p>
+        •	Responsive website
+        <br>
+        •	Mobile Friendly
+        <br>
+        •	SEO Optimized
+        <br>
+        •	HTML and CSS
+        <br>
+        •	Security & Speed
+        <br>
+        •	Premium Template and Plugins
+        <br>
+        •	Custom Design
+        <br>
+        •	Extreme Typography & Design
+        <br>
+        •	Easy to use Admin panel
+        <br>
+        •	Social Media Integration
+        <br>
+        •	eCommerce Website for your online business
+        <br>
+        •	Wordpress
+    </p>
+    <br>
+  </div>
+</div>
+<div class="section_3">
+    <br><br>
+    <h1 style="font-size:2rem;">Why choose AFRIGENT for your project?</h1>
+    Complete support after the work, Super-fast delivery, Unlimited Revisions, 24/7 Quality Support, 100% Client Satisfaction
 <br><br>
+<b>Client satisfaction is our priority</b>
+<center>
+  <br>
+  <div>
+    <a href="contact.html">
+<div class="button2">
+  <p style="color:#ffffff;"> Contact Us</p>
 </div>
-<!-- footer -->
-<br><br>
+</a>
+</div>
+</center>
+<br><br><br>
+</div>
 <div class="footer">
   <footer class="footer" data-section-theme="dark">
     <div  class="container_22">
       <div class="row">
         <div class="col-1-2">
-          <img src="1.png" alt="Afrigent" width="100" height="40">
+          <img src="1.png" alt="Afrigent" width="100" height="40"> 
         </div>
+        <br><br>
         <div class="col-1-2">
           <h1 style="font-size:1.5em; color:#ffffff;"> Follow Us @<br></h1>
           <ul class="social nav">
@@ -166,6 +216,7 @@
                 </svg>
               </a>
             </li>
+            
             <li class="social-item nav-item">
               <a href="https://twitter.com/Afrigent_001?t=18CYwBhAbHzhcHgiorbVPg&s=08" target="_blank" class="social-link">
                 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
@@ -200,5 +251,5 @@
     </div>
   </footer>
 </div>
-</body>
-</html>
+  </body>
+  </html>
