--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,17 @@
     <meta name="AFRIGENT" content="Looking for an all-round team, an agency specialist who can help create and launch your dream online business with zero worries about technical 
     stuff, marketing strategy, branding scheme and sales generation issue, AFRIGENT AGENCY got it all covered with utmost sincerity and high level of professionalism.">
     <link rel="apple-touch-icon" sizes="180x180" href="./Images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="./Images/Afrigent.png">
+    <link rel="icon" type="image/png" href="Afrigent.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
     <title>HOMEPAGE - AFRIGENT</title>
-    <link href="../dist/output.css" rel="stylesheet">
-    <link href="./index.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
   </head>
 <body>
   <!-- Navigation Bar -->
     <nav>
         <div class="logo">
-            <a href="index.html"><img src="./Images/Afrigent.png"  alt="Logo Image"></a>
+            <a href="index.html"><img src="Afrigent.png"  alt="Logo Image"></a>
         </div>
         <div class="hamburger">
             <div class="bars1"></div>
@@ -34,7 +34,7 @@
         </ul>
     </nav>
 <!-- Navscript -->
-    <script src="./Javascript/scripts.js"></script>
+    <script src=""></script>
 <!-- Navscript EndS -->
 <!-- Nav Ends -->
 
@@ -69,14 +69,14 @@
     <br>
   </div>
   <div class="column-2 box">
-    <img src="./Images/Digital Marketing.jpg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
+    <img src="Digital Marketing.jpg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
   </div>
 </div>
 <!-- Flex box 2 -->
 <br><br>
 <div class="container_2">
   <div class="column-1 box">
-    <img src="./Images/concept.png" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
+    <img src="concept.png" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
   </div>
   <div class="column-2 box_2">
     <br><br>
@@ -151,7 +151,7 @@
     <div  class="container_22">
       <div class="row">
         <div class="col-1-2">
-          <img src="./Images/1.png" alt="Afrigent" width="100" height="40">
+          <img src="1.png" alt="Afrigent" width="100" height="40">
         </div>
         <div class="col-1-2">
           <h1 style="font-size:1.5em; color:#ffffff;"> Follow Us @<br></h1>
