--- a/about.html
+++ b/about.html
@@ -11,105 +11,64 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
     <title>HOMEPAGE - AFRIGENT</title>
     <link href="./dist/output.css" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
   </head>
-<body>
-  <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <a href="index.html"><img src="Afrigent.png"  alt="Logo Image"></a>
-        </div>
-        <div class="hamburger">
-            <div class="bars1"></div>
-            <div class="bars2"></div>
-            <div class="bars3"></div>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="service.html">Services</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <!-- <li><a href="#">Reviews</a></li> -->
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
-<!-- Navscript -->
-    <script src="scripts.js"></script>
-<!-- Navscript EndS -->
-<!-- Nav Ends -->
-
-<!-- Hero Section -->
-  <br><br><br>
-  <div class="hero-section">
-    <div class="hero-section-text">
-      <h1 style="font-family: montserrat; font-weight: 700;">We're here to help you grow<br> your business online.</h1>
-      <br>
-      <center>
-        <div>
-          <a href="service.html">
-   <div class="button">
-       <p> Get Started</p>
-  </div>
-  </a>
-  </div>
-  </center>
+  <body>
+    <!-- Navigation -->
+      <nav>
+          <div class="logo">
+              <a href="index.html"><img src="Afrigent.png"  alt="Logo Image"></a>
+          </div>
+          <div class="hamburger">
+              <div class="bars1"></div>
+              <div class="bars2"></div>
+              <div class="bars3"></div>
+          </div>
+          <ul class="nav-links">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="service.html">Services</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <!-- <li><a href="#">Reviews</a></li> -->
+              <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+      </nav>
+  <!-- Navscript -->
+      <script src="scripts.js"></script>
+  <!-- Navscript EndS -->
+  <!-- Nav Ends -->
+  
+  <!-- Hero Section -->
+    <br><br><br>
+    <div class="hero-section_2">
+      <div class="hero-section-text">
+        <h1 style="font-family: montserrat; font-weight: 700;">
+        We're your Digital Marketing Partner where the focus is on you!
+        </h1>
+        <br>
+        <center>
+     <div class="button">
+         <p> Get Started</p>
     </div>
-  </div>
-<!-- Flex box 1 -->
-<br><br>
-<div class="container">
-  <div class="column-1 box">
-    <br>
-    <h3>WHO WE ARE</h3>
-    <h1 style="font-size:2rem;">Digital Marketing Specialists</h1>
-    <br>
-    <p>
-      As with any fully functioning website, Digital Marketing campaigns are an integral part of your success online. Our team is here to enhance your business online with effective management of your Search Engine Optimisation (SEO), Pay Per Click (PPC) and Social Media campaigns. Our professional service packages target your audience helping you to generate leads, conversions and brand awareness across multiple platforms.
-    </p>
-    <br>
-  </div>
-  <div class="column-2 box">
-    <img src="Digital Marketing.jpg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
-  </div>
-</div>
-<!-- Flex box 2 -->
-<br><br>
-<div class="container_2">
-  <div class="column-1 box">
-    <img src="concept.png" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
-  </div>
-  <div class="column-2 box_2">
-    <br><br>
-       <h3>OUR CONCEPT</h3>
-    <h1 style="font-size:2rem;">We rise by lifting others.</h1>
-    <br>
-    <p>
-      The purpose of Afrigent is based on delivering professional digital marketing campaigns and communication services that support your new or existing website. Our team includes dedicated and passionate individuals offering a variety of skills, experience and knowledge to get your business moving online - we work together to achieve your goals.
-    </p>
-  </div>
-</div>
-<!-- Section_2 -->
-<div class="section_2">
-  <br><br>
-  <h3>OUR PROCESS</h3>
-  <h1 style="font-size:2rem;"><b>Brand awareness & lead generation</b></h1>
-  <br>
-  <P>
-    Through a multitude of Digital Marketing campaigns and our team's expertise at your disposal, there is no reason why you can't maximise your online potential with our professional approach and goal driven process. Everything we do is with purpose and meaning.
-  </P>
-  <br>
-  <br>
-  <!-- 3-column -->
-<div class="container_2">
+    </center>
+      </div>
+    </div>
+
+    <!-- section 1 -->
+    <br><br><br>
+    <div class="section_3">
+      <h3><b>Our Value</b></h3>
+      <h1 style="font-size:2rem;">Honesty Trust Improve</h1>
+      <br>
+    <div class="container_2">
   <div class="column_2">
     <br>
     <center>
-    <div class="number">
-      <h1>1</h1>
-    </div>
+      <img src="Afri001.jpeg" alt="img" width="90%" height="90%" style="border-radius: 5px;">
     <br>
+    <h1 style="color: rgb(42, 42, 42); font-size: 2em;">HONESTY</h1>
     <p style="color: rgb(46, 46, 46);">
-      We make the effort to understand our clients. We take on board your requirements. We're here to transform your business online and achieve your digital goals.
+      We believe in complete honesty with our clients. We always give honest feedback without fear and without ego to make the most responsible decisions on behalf of our clients marketing efforts.
     </p>
   </center>
   <br><br>
@@ -117,12 +76,11 @@
   <div class="column_2">
     <br>
     <center>
-    <div class="number">
-      <h1>2</h1>
-    </div>
+      <img src="Afri002.jpeg" alt="img" width="90%" height="90%" style="border-radius: 5px;">
     <br>
+    <h1 style="color: rgb(42, 42, 42); font-size: 2em;">TRUST</h1>
     <p style="color: rgb(46, 46, 46);">
-      We research deep into your products/services, overall business and industry specifics ensuring we reach your target audience and beat the competition!
+      Our clients trust us with the success of their business. We make decisions based on our process and our digital platform knowledge.
     </p>
   </center>
   <br><br>
@@ -131,28 +89,69 @@
   <div class="column_2">
     <br>
     <center>
-    <div class="number">
-      <h1>3</h1>
-    </div>
+      <img src="Afri003.jpeg" alt="img" width="90%" height="90%" style="border-radius: 5px;">
     <br>
+    <h1 style="color: rgb(42, 42, 42); font-size: 2em;">IMPROVE</h1>
     <p style="color: rgb(46, 46, 46);">
-      We believe that success comes from a strategy and a plan of action. Your Digital Marketing campaign is always one step ahead with the team at Afrigent.
-    </p>
+      If we do well, then our clients do well. We’re responsible for our clients successes and ROI. We regularly evaluate our campaigns and ensure each one is optimized for the biggest return.
+          </p>
   </center>
-  <br><br>
+          <br><br>
+          </div>
+          </div>
+      <br><br>
+        </div>
+      </div>
+      <!-- section_2 -->
+      <br><br>
+      <div class="section_2">
+        <br><br>
+    <div class="container">
+  <div class="column-1 box">
+    <h1 style="font-size:2rem; text-align:left;">You're in good company.</h1>
+    <br>
+    <p style="text-align: left;">
+      AFRIGENT has experienced developer whose level of professionalism is proven to be effective in handling E-learning platforms, web development, funnel building and digital marketer. At AFRIGENT we are passionate and very much interested in delivering top notch projects to satisfy client’s needs.
+      As an agency, we designed, developed and implemented the entire technical system, including hosting of the Moodle learning management system. We take pride in what we do and we believe that our commitment and dedication to rendering only quality services has always been the biggest driver of our success in any project we handle and co-handled
+      I have expertise in various domain – E-learning Development, Web development, digital marketing and online course creation. As a result, we bring a special combination of skill-set that enable we manage multi-disciplinary projects and to overcome complex challenges.
+      I have learnt so far never to compromise quality work for money or time and to always let our clients satisfaction be our goal and utmost priority.      
+    </p>
+    <br>
+  </div>
+  <div class="column-2 box">
+    <br><br>
+    <img src="about-us.png" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
   </div>
 </div>
-<br><br>
 </div>
-<!-- footer -->
+<br><br>
+<div class="section_3">
+<div class="container_2">
+  <div class="column-1 box">
+    <h1 style="font-size:2rem; text-align:left;">If you have a project you would like to discuss? Get started.</h1>
+    <br>
+  </div>
+  <div class="column-2 box">
+    <br>
+    <div>
+      <a href="contact.html">
+<div class="button2">
+   <p> Get Started</p>
+</div>
+</a>
+</div>
+  </div>
+</div>
+</div>
 <br><br>
 <div class="footer">
   <footer class="footer" data-section-theme="dark">
     <div  class="container_22">
       <div class="row">
         <div class="col-1-2">
-          <img src="1.png" alt="Afrigent" width="100" height="40">
+          <img src="1.png" alt="Afrigent" width="100" height="40"> 
         </div>
+        <br><br>
         <div class="col-1-2">
           <h1 style="font-size:1.5em; color:#ffffff;"> Follow Us @<br></h1>
           <ul class="social nav">
@@ -166,6 +165,7 @@
                 </svg>
               </a>
             </li>
+            
             <li class="social-item nav-item">
               <a href="https://twitter.com/Afrigent_001?t=18CYwBhAbHzhcHgiorbVPg&s=08" target="_blank" class="social-link">
                 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="25" height="25">
@@ -199,6 +199,5 @@
       </div>
     </div>
   </footer>
-</div>
-</body>
+    </body>
 </html>
