--- a/about.html
+++ b/about.html
@@ -112,9 +112,9 @@
     <br>
     <p style="text-align: left;">
       AFRIGENT has experienced developer whose level of professionalism is proven to be effective in handling E-learning platforms, web development, funnel building and digital marketer. At AFRIGENT we are passionate and very much interested in delivering top notch projects to satisfy client’s needs.
-      As an agency, we designed, developed and implemented the entire technical system, including hosting of the Moodle learning management system. We take pride in what we do and we believe that our commitment and dedication to rendering only quality services has always been the biggest driver of our success in any project we handle and co-handled
-      I have expertise in various domain – E-learning Development, Web development, digital marketing and online course creation. As a result, we bring a special combination of skill-set that enable we manage multi-disciplinary projects and to overcome complex challenges.
-      I have learnt so far never to compromise quality work for money or time and to always let our clients satisfaction be our goal and utmost priority.      
+      As an agency, we designed, developed and implemented the entire technical system, including hosting of the Moodle learning management system. We take pride in what we do and we believe that our commitment and dedication to rendering only quality services has always been the biggest driver of our success in any project we handle and co-handled.
+      We have expertise in various domain – E-learning Development, Web development, digital marketing and online course creation. As a result, we bring a special combination of skill-set that enable we manage multi-disciplinary projects and to overcome complex challenges.
+      We have learnt so far never to compromise quality work for money or time and to always let our clients satisfaction be our goal and utmost priority.      
     </p>
     <br>
   </div>
