--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
     <div>
       <a href="contact.html">
 <div class="button2">
-   <p> Get Started</p>
+   <p style="color: #ffffff;"> Get Started</p>
 </div>
 </a>
 </div>
