--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="AFRIGENT" content="Looking for an all-round team, an agency specialist who can help create and launch your dream online business with zero worries about technical 
     stuff, marketing strategy, branding scheme and sales generation issue, AFRIGENT AGENCY got it all covered with utmost sincerity and high level of professionalism.">
     <link rel="apple-touch-icon" sizes="180x180" href="./Images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="./Images/Afrigent.png">
+    <link rel="icon" type="image/png" href="Afrigent.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
     <title>HOMEPAGE - AFRIGENT</title>
     <link href="./dist/output.css" rel="stylesheet">
