--- a/service.html
+++ b/service.html
@@ -135,7 +135,7 @@
     <br>
   </div>
   <div class="column-2 box">
-    <img src="./Images/graphics.jpg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
+    <img src="graphics.jpg" alt="Digital Marketing" width="100%" height="100%" style="border-radius:16px;">
   </div>
 </div>
 <br>
