--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
       <div  class="container_22">
         <div class="row">
           <div class="col-1-2">
-            <img src="./Images/1.png" alt="Afrigent" width="100" height="40"> 
+            <img src="1.png" alt="Afrigent" width="100" height="40"> 
           </div>
           <br><br>
           <div class="col-1-2">
