--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h1 style="font-size:2rem;">We rise by lifting others.</h1>
     <br>
     <p>
-      The purpose of Afrigent is based on delivering professional digital marketing campaigns and communication services that support your new or existing website. Our team includes dedicated and passionate individuals offering a variety of skills, experience and knowledge to get your business moving online - we work together to achieve your goals.
+      The.. purpose of Afrigent is based on delivering professional digital marketing campaigns and communication services that support your new or existing website. Our team includes dedicated and passionate individuals offering a variety of skills, experience and knowledge to get your business moving online - we work together to achieve your goals.
     </p>
   </div>
 </div>
