--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 <!-- Nav Ends -->
 
 <!-- Hero Section -->
-  <br><br><br>
   <div class="hero-section">
     <div class="hero-section-text">
+      <br><br><br><br>
       <h1 style="font-family: montserrat; font-weight: 700;">We're here to help you grow<br> your business online.</h1>
       <br>
       <center>
@@ -55,6 +55,7 @@
   </center>
     </div>
   </div>
+  </div></div>
 <!-- Flex box 1 -->
 <br><br>
 <div class="container">
