--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   </div>
 </div>
 <!-- Section_2 -->
+<section id="sec_22">
 <div class="section_2">
   <br><br>
   <h3>OUR PROCESS</h3>
@@ -145,6 +146,7 @@
 </div>
 <br><br>
 </div>
+</section>
 <!-- footer -->
 <br><br>
 <div class="footer">
